--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/timaschew/hound-test#readme",
   "devDependencies": {
-    "eslint": "^1.6.0"
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^1.0.2"
   }
 }
