--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
-  "extends": "airbnb/base",
-  "env": {
-    "es6": true,
-    "browser": false
-  }
+    "rules": {},
+    "env": {
+        "es6": false,
+        "browser": true
+    },
+    "extends": "eslint:recommended"
 }
