--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
-    "rules": {},
-    "env": {
-        "es6": true,
-        "browser": true
-    },
-    "extends": "airbnb"
+  "extends": "eslint:recommended",
+  "env": {
+    "es6": true,
+    "browser": false
+  }
 }
