--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
-  "extends": "eslint:recommended",
-  "env": {
-    "es6": true,
-    "browser": false
-  }
+    "rules": {},
+    "env": {
+        "es6": true,
+        "browser": false
+    },
+    "extends": "airbnb/base"
 }
