--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,19 @@
 {
-    "rules": {},
+    "extends": "airbnb/base",
     "env": {
         "es6": true,
-        "browser": false
+        "browser": true
     },
-    "extends": "airbnb/base"
+    "rules": {
+      "strict": [0],
+      "indent": [2, 2],
+      "comma-dangle": [2, "never"],
+      "semi": [2, "never"],
+      "no-underscore-dangle": 0,
+      "no-constant-condition": 0,
+      "no-use-before-define": 0,
+      "max-len": [2, 80, 4, {"ignoreComments": true}],
+      "no-new": 1,
+      "prefer-arrow-callback": 1
+    }
 }
